[gd_scene load_steps=19 format=3 uid="uid://dkrn821xnfwxw"]

[ext_resource type="Script" uid="uid://l8klh3jubh4" path="res://scripts/seleção_personagem.gd" id="1_dbwua"]
[ext_resource type="Texture2D" uid="uid://b0w4a3vo4d127" path="res://imagens/placas.png" id="1_rcnp2"]
[ext_resource type="Texture2D" uid="uid://cqwgnbljnmr5h" path="res://imagens/letras.png" id="2_dbwua"]
[ext_resource type="Script" uid="uid://du0utjw43kdh6" path="res://cenas/show_erro.gd" id="3_15l8f"]
[ext_resource type="Texture2D" uid="uid://c1dpify55utsm" path="res://imagens/erro.png" id="4_t26t2"]
[ext_resource type="FontFile" uid="uid://ceala3nd5qfyv" path="res://fontes/ByteBounce.ttf" id="5_qyb81"]
[ext_resource type="Script" uid="uid://cc0ud1speduqy" path="res://scripts/mouse_area.gd" id="6_dmxof"]
[ext_resource type="Texture2D" uid="uid://bvvctkil27ojq" path="res://imagens/layer/token-border-collection-v0-8pv4nqo221ja1.png" id="7_22ejx"]
[ext_resource type="Texture2D" uid="uid://i10t8ficq3ni" path="res://imagens/layer/sele_layer.png" id="8_27sag"]
[ext_resource type="FontFile" uid="uid://m8ib5aucaayr" path="res://fontes/PressStart2P-Regular.ttf" id="9_bh0q7"]

[sub_resource type="FontVariation" id="FontVariation_4pdsd"]
base_font = ExtResource("5_qyb81")

[sub_resource type="Animation" id="Animation_jupw8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("criação de personagem/show_erro:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, -351)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("criação de personagem/show_erro:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("criação de personagem/show_erro:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pgk4w"]
resource_name = "aparecer"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("criação de personagem/show_erro:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-10, -330), Vector2(-10, -390)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("criação de personagem/show_erro:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("criação de personagem/show_erro:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ye5uu"]
resource_name = "desaparecer"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("criação de personagem/show_erro:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-10, -390), Vector2(-10, -330)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("criação de personagem/show_erro:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("criação de personagem/show_erro:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fq4k4"]
_data = {
&"RESET": SubResource("Animation_jupw8"),
&"aparecer": SubResource("Animation_pgk4w"),
&"desaparecer": SubResource("Animation_ye5uu")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_pv6r6"]
radius = 7.28011

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_m3l8s"]

[sub_resource type="FontVariation" id="FontVariation_ta8dn"]
base_font = ExtResource("9_bh0q7")

[node name="seleção_personagem" type="Node2D"]
script = ExtResource("1_dbwua")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -1284.0
offset_top = -684.0
offset_right = 1396.0
offset_bottom = 634.0
color = Color(0.501961, 0.309804, 0.156863, 1)

[node name="ColorRect4" type="ColorRect" parent="ColorRect2"]
layout_mode = 0
offset_left = 696.0
offset_top = 347.0
offset_right = 1844.0
offset_bottom = 990.0
color = Color(0.568399, 0.354739, 0.185187, 1)

[node name="ColorRect5" type="ColorRect" parent="ColorRect2"]
layout_mode = 0
offset_left = 864.0
offset_top = 427.0
offset_right = 1695.0
offset_bottom = 947.0
color = Color(0.608395, 0.382279, 0.203273, 1)

[node name="Placas6" type="Sprite2D" parent="."]
position = Vector2(57, 306)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_rcnp2")
flip_v = true
region_enabled = true
region_rect = Rect2(447.875, 341, 353.25, 132.75)

[node name="Placas5" type="Sprite2D" parent="Placas6"]
position = Vector2(-195, 0)
texture = ExtResource("1_rcnp2")
flip_v = true
region_enabled = true
region_rect = Rect2(65.375, 341, 315, 132.75)

[node name="login" type="Sprite2D" parent="Placas6"]
position = Vector2(-197.5, -2.5)
scale = Vector2(0.425, 0.425)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(711.125, 278, 130.5, 157.5)

[node name="o" type="Sprite2D" parent="Placas6/login"]
position = Vector2(125, 5)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(229.625, 469.25, 119.25, 153)

[node name="g" type="Sprite2D" parent="Placas6/login"]
position = Vector2(250, 5)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(78.875, 278, 132.75, 159.75)

[node name="i" type="Sprite2D" parent="Placas6/login"]
position = Vector2(350, 0)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(373.625, 273.5, 74.25, 162)

[node name="n" type="Sprite2D" parent="Placas6/login"]
position = Vector2(458.824, 5.88235)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(78.875, 469.25, 148.5, 159.75)

[node name="login2" type="Button" parent="Placas6"]
offset_left = -345.625
offset_top = -61.25
offset_right = 151.375
offset_bottom = 51.75

[node name="show_erro" type="Node2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(-10, -351)
script = ExtResource("3_15l8f")

[node name="show_erro" type="Sprite2D" parent="show_erro"]
position = Vector2(-233, 34)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_t26t2")
region_enabled = true
region_rect = Rect2(180.125, 187.609, 398.25, 28.936)

[node name="Erro7" type="Sprite2D" parent="show_erro/show_erro"]
position = Vector2(395, 2.5)
texture = ExtResource("4_t26t2")
region_enabled = true
region_rect = Rect2(180.125, 187.609, 398.25, 28.936)

[node name="Erro8" type="Sprite2D" parent="show_erro/show_erro"]
position = Vector2(775, 2.5)
texture = ExtResource("4_t26t2")
region_enabled = true
region_rect = Rect2(180.125, 187.609, 398.25, 28.936)

[node name="Erro7" type="Sprite2D" parent="show_erro/show_erro/Erro8"]
position = Vector2(395, 2.5)
texture = ExtResource("4_t26t2")
region_enabled = true
region_rect = Rect2(180.125, 187.609, 398.25, 28.936)

[node name="Erro8" type="Sprite2D" parent="show_erro/show_erro/Erro8"]
position = Vector2(417.5, -1.19209e-06)
texture = ExtResource("4_t26t2")
region_enabled = true
region_rect = Rect2(180.125, 187.609, 398.25, 28.936)

[node name="Erro" type="Sprite2D" parent="show_erro/show_erro"]
position = Vector2(-257.5, -48.0522)
scale = Vector2(1, 1.0096)
texture = ExtResource("4_t26t2")
region_enabled = true
region_rect = Rect2(49.625, 120.09, 132.75, 115.673)

[node name="Erro5" type="Sprite2D" parent="show_erro/show_erro/Erro"]
position = Vector2(0, 99.5957)
texture = ExtResource("4_t26t2")
flip_v = true
region_enabled = true
region_rect = Rect2(49.625, 120.09, 132.75, 115.673)

[node name="Erro3" type="Sprite2D" parent="show_erro/show_erro/Erro"]
position = Vector2(1702.5, 99.5958)
texture = ExtResource("4_t26t2")
flip_h = true
flip_v = true
region_enabled = true
region_rect = Rect2(49.625, 120.09, 132.75, 115.673)

[node name="Erro4" type="Sprite2D" parent="show_erro/show_erro/Erro"]
position = Vector2(1702.5, 0.546997)
texture = ExtResource("4_t26t2")
flip_h = true
region_enabled = true
region_rect = Rect2(49.625, 120.09, 132.75, 115.673)

[node name="Erro2" type="Sprite2D" parent="show_erro/show_erro"]
position = Vector2(2.50003, -50.0001)
texture = ExtResource("4_t26t2")
region_enabled = true
region_rect = Rect2(177.875, 135.545, 400.5, 81)

[node name="Erro3" type="Sprite2D" parent="show_erro/show_erro/Erro2"]
position = Vector2(397.5, 0)
texture = ExtResource("4_t26t2")
region_enabled = true
region_rect = Rect2(180.125, 135.545, 398.25, 81)

[node name="Erro4" type="Sprite2D" parent="show_erro/show_erro/Erro2"]
position = Vector2(792.5, 0)
texture = ExtResource("4_t26t2")
region_enabled = true
region_rect = Rect2(177.875, 135.545, 400.5, 81)

[node name="Erro3" type="Sprite2D" parent="show_erro/show_erro/Erro2/Erro4"]
position = Vector2(397.5, 0)
texture = ExtResource("4_t26t2")
region_enabled = true
region_rect = Rect2(180.125, 135.545, 398.25, 81)

[node name="Erro5" type="Sprite2D" parent="show_erro/show_erro/Erro2"]
position = Vector2(1190, 105)
rotation = -3.14159
texture = ExtResource("4_t26t2")
region_enabled = true
region_rect = Rect2(177.875, 135.545, 400.5, 81)

[node name="Erro3" type="Sprite2D" parent="show_erro/show_erro/Erro2/Erro5"]
position = Vector2(397.5, 0)
texture = ExtResource("4_t26t2")
region_enabled = true
region_rect = Rect2(180.125, 135.545, 398.25, 81)

[node name="Erro4" type="Sprite2D" parent="show_erro/show_erro/Erro2/Erro5"]
position = Vector2(792.5, 0)
texture = ExtResource("4_t26t2")
region_enabled = true
region_rect = Rect2(177.875, 135.545, 400.5, 81)

[node name="Erro3" type="Sprite2D" parent="show_erro/show_erro/Erro2/Erro5/Erro4"]
position = Vector2(397.5, 0)
texture = ExtResource("4_t26t2")
region_enabled = true
region_rect = Rect2(180.125, 135.545, 398.25, 81)

[node name="ColorRect" type="ColorRect" parent="show_erro"]
modulate = Color(1, 1, 1, 0.333333)
show_behind_parent = true
offset_left = -362.0
offset_top = -8.0
offset_right = 365.0
offset_bottom = 69.0
color = Color(0.403087, 0, 0.11844, 1)

[node name="label_mensagem" type="Label" parent="show_erro"]
modulate = Color(0.999546, 0.982296, 0.966632, 1)
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(30, 30)
offset_left = -357.0
offset_top = -1.0
offset_right = 362.0
offset_bottom = 61.0
pivot_offset = Vector2(95, 0)
theme_override_fonts/font = SubResource("FontVariation_4pdsd")
theme_override_font_sizes/font_size = 30
text = "vazio"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="TimerErro" type="Timer" parent="show_erro"]
wait_time = 1.9

[node name="AnimationPlayer" type="AnimationPlayer" parent="show_erro"]
root_node = NodePath("../../..")
libraries = {
&"": SubResource("AnimationLibrary_fq4k4")
}
speed_scale = 6.0

[node name="mouse_area" type="Area2D" parent="."]
visible = false
position = Vector2(-490, -191)
collision_layer = 128
collision_mask = 128
monitoring = false
script = ExtResource("6_dmxof")

[node name="CollisionShape2D" type="CollisionShape2D" parent="mouse_area"]
shape = SubResource("CircleShape2D_pv6r6")

[node name="Token-border-collection-v0-8Pv4Nqo221Ja1" type="Sprite2D" parent="mouse_area"]
visible = false
position = Vector2(2.38419e-07, -7.689e-06)
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_22ejx")

[node name="SeleçãoPersonagem" type="Sprite2D" parent="."]
position = Vector2(-84, -8)
texture = SubResource("CompressedTexture2D_m3l8s")
region_enabled = true
region_rect = Rect2(0, 208.375, 604.5, 283.625)

[node name="SeleçãoPersonagem7" type="Sprite2D" parent="SeleçãoPersonagem"]
position = Vector2(128, 0)
texture = SubResource("CompressedTexture2D_m3l8s")
flip_h = true
region_enabled = true
region_rect = Rect2(0, 208.375, 604.5, 283.625)

[node name="slots_selecao" type="Sprite2D" parent="SeleçãoPersonagem"]
position = Vector2(-155, 8)
texture = ExtResource("8_27sag")
region_enabled = true
region_rect = Rect2(112.625, -8.25, 193.5, 213.75)

[node name="layer" type="Sprite2D" parent="SeleçãoPersonagem/slots_selecao"]

[node name="SeleçãoPersonagem4" type="Sprite2D" parent="SeleçãoPersonagem/slots_selecao/layer"]
texture = ExtResource("8_27sag")
region_enabled = true
region_rect = Rect2(473.188, 6.104, 263.25, 189.646)

[node name="Placas" type="Sprite2D" parent="SeleçãoPersonagem/slots_selecao/layer"]
position = Vector2(-25, 94)
rotation = -1.5708
scale = Vector2(0.530292, 0.383957)
texture = ExtResource("1_rcnp2")
region_enabled = true
region_rect = Rect2(823.625, 374.75, 137.25, 405)

[node name="Placas2" type="Sprite2D" parent="SeleçãoPersonagem/slots_selecao/layer/Placas"]
position = Vector2(3.77151, 171.894)
texture = ExtResource("1_rcnp2")
flip_h = true
flip_v = true
region_enabled = true
region_rect = Rect2(823.625, 374.75, 137.25, 308.25)

[node name="Label" type="Label" parent="SeleçãoPersonagem/slots_selecao/layer"]
modulate = Color(0.792157, 0.576471, 0.247059, 1)
offset_left = -78.0
offset_top = 90.0
offset_right = 852.0
offset_bottom = 120.0
scale = Vector2(0.16, 0.16)
theme_override_fonts/font = SubResource("FontVariation_ta8dn")
theme_override_font_sizes/font_size = 30
text = "1234567891011121314151617181920"

[node name="Label2" type="Label" parent="SeleçãoPersonagem/slots_selecao/layer"]
modulate = Color(0.792157, 0.576471, 0.247059, 1)
offset_left = -19.0
offset_top = -66.0
offset_right = 71.0
offset_bottom = -36.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = SubResource("FontVariation_ta8dn")
theme_override_font_sizes/font_size = 30
text = "999"

[node name="slots_selecao2" type="Sprite2D" parent="SeleçãoPersonagem"]
position = Vector2(66, 8)
texture = ExtResource("8_27sag")
region_enabled = true
region_rect = Rect2(112.625, -8.25, 193.5, 213.75)

[node name="layer" type="Sprite2D" parent="SeleçãoPersonagem/slots_selecao2"]

[node name="SeleçãoPersonagem4" type="Sprite2D" parent="SeleçãoPersonagem/slots_selecao2/layer"]
texture = ExtResource("8_27sag")
region_enabled = true
region_rect = Rect2(473.188, 6.104, 263.25, 189.646)

[node name="Placas" type="Sprite2D" parent="SeleçãoPersonagem/slots_selecao2/layer"]
position = Vector2(-25, 94)
rotation = -1.5708
scale = Vector2(0.530292, 0.383957)
texture = ExtResource("1_rcnp2")
region_enabled = true
region_rect = Rect2(823.625, 374.75, 137.25, 405)

[node name="Placas2" type="Sprite2D" parent="SeleçãoPersonagem/slots_selecao2/layer/Placas"]
position = Vector2(3.77151, 171.894)
texture = ExtResource("1_rcnp2")
flip_h = true
flip_v = true
region_enabled = true
region_rect = Rect2(823.625, 374.75, 137.25, 308.25)

[node name="Label" type="Label" parent="SeleçãoPersonagem/slots_selecao2/layer"]
modulate = Color(0.792157, 0.576471, 0.247059, 1)
offset_left = -78.0
offset_top = 90.0
offset_right = 852.0
offset_bottom = 120.0
scale = Vector2(0.16, 0.16)
theme_override_fonts/font = SubResource("FontVariation_ta8dn")
theme_override_font_sizes/font_size = 30
text = "1234567891011121314151617181920"

[node name="Label2" type="Label" parent="SeleçãoPersonagem/slots_selecao2"]
modulate = Color(0.792157, 0.576471, 0.247059, 1)
offset_left = -19.0
offset_top = -66.0
offset_right = 71.0
offset_bottom = -36.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = SubResource("FontVariation_ta8dn")
theme_override_font_sizes/font_size = 30
text = "999"

[node name="slots_selecao3" type="Sprite2D" parent="SeleçãoPersonagem"]
position = Vector2(288, 7)
texture = ExtResource("8_27sag")
region_enabled = true
region_rect = Rect2(112.625, -8.25, 193.5, 213.75)

[node name="layer" type="Sprite2D" parent="SeleçãoPersonagem/slots_selecao3"]

[node name="SeleçãoPersonagem4" type="Sprite2D" parent="SeleçãoPersonagem/slots_selecao3/layer"]
texture = ExtResource("8_27sag")
region_enabled = true
region_rect = Rect2(473.188, 6.104, 263.25, 189.646)

[node name="Placas" type="Sprite2D" parent="SeleçãoPersonagem/slots_selecao3/layer"]
position = Vector2(-25, 94)
rotation = -1.5708
scale = Vector2(0.530292, 0.383957)
texture = ExtResource("1_rcnp2")
region_enabled = true
region_rect = Rect2(823.625, 374.75, 137.25, 405)

[node name="Placas2" type="Sprite2D" parent="SeleçãoPersonagem/slots_selecao3/layer/Placas"]
position = Vector2(3.77151, 171.894)
texture = ExtResource("1_rcnp2")
flip_h = true
flip_v = true
region_enabled = true
region_rect = Rect2(823.625, 374.75, 137.25, 308.25)

[node name="Label" type="Label" parent="SeleçãoPersonagem/slots_selecao3/layer"]
modulate = Color(0.792157, 0.576471, 0.247059, 1)
offset_left = -78.0
offset_top = 90.0
offset_right = 852.0
offset_bottom = 120.0
scale = Vector2(0.16, 0.16)
theme_override_fonts/font = SubResource("FontVariation_ta8dn")
theme_override_font_sizes/font_size = 30
text = "1234567891011121314151617181920"

[node name="Label2" type="Label" parent="SeleçãoPersonagem/slots_selecao3"]
modulate = Color(0.792157, 0.576471, 0.247059, 1)
offset_left = -19.0
offset_top = -66.0
offset_right = 71.0
offset_bottom = -36.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = SubResource("FontVariation_ta8dn")
theme_override_font_sizes/font_size = 30
text = "999"

[node name="SeleçãoPersonagem3" type="Sprite2D" parent="SeleçãoPersonagem"]
position = Vector2(-47, 8)
texture = SubResource("CompressedTexture2D_m3l8s")
region_enabled = true
region_rect = Rect2(314.563, -10.5, 74.25, 226.125)

[node name="SeleçãoPersonagem2" type="Sprite2D" parent="SeleçãoPersonagem"]
position = Vector2(175, 7)
texture = SubResource("CompressedTexture2D_m3l8s")
region_enabled = true
region_rect = Rect2(314.563, -10.5, 74.25, 226.125)

[node name="Placas7" type="Sprite2D" parent="."]
position = Vector2(130, -117)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_rcnp2")
region_enabled = true
region_rect = Rect2(447.875, 341, 353.25, 132.75)

[node name="Placas5" type="Sprite2D" parent="Placas7"]
position = Vector2(-320, 1.27554e-05)
texture = ExtResource("1_rcnp2")
region_enabled = true
region_rect = Rect2(65.375, 341, 315, 132.75)

[node name="Placas6" type="Sprite2D" parent="Placas7"]
position = Vector2(-500, 1.28746e-05)
texture = ExtResource("1_rcnp2")
region_enabled = true
region_rect = Rect2(65.375, 341, 315, 132.75)

[node name="login" type="Sprite2D" parent="Placas7"]
position = Vector2(-603.333, -1.66665)
scale = Vector2(0.3, 0.4)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(746.563, 464.75, 111.375, 162)

[node name="o" type="Sprite2D" parent="Placas7/login"]
position = Vector2(122.222, 1.14441e-05)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(618.313, 80, 151.875, 175.5)

[node name="o3" type="Sprite2D" parent="Placas7/login"]
position = Vector2(500, 8.33334)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(358.438, 86.75, 128.25, 172.125)

[node name="o6" type="Sprite2D" parent="Placas7/login"]
position = Vector2(244.444, 4.16667)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(706.063, 282.5, 131.625, 155.25)

[node name="o5" type="Sprite2D" parent="Placas7/login"]
position = Vector2(622.222, -4.16666)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(88.438, 69.875, 145.125, 185.625)

[node name="o4" type="Sprite2D" parent="Placas7/login"]
position = Vector2(965.778, 8.33334)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(483.313, 86.75, 276.75, 172.125)

[node name="o2" type="Sprite2D" parent="Placas7/login"]
position = Vector2(750, 6.67572e-06)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(223.438, 468.125, 128.25, 155.25)

[node name="g" type="Sprite2D" parent="Placas7/login"]
position = Vector2(383.333, -1.21593e-05)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(618.313, 73.25, 151.875, 178.875)

[node name="i" type="Sprite2D" parent="Placas7/login"]
position = Vector2(1819.36, -4.74504)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(63.125, 455.75, 162, 166.5)

[node name="i2" type="Sprite2D" parent="Placas7/login"]
position = Vector2(1972.3, -25.3333)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(81.125, 30.5, 155.25, 216)

[node name="i3" type="Sprite2D" parent="Placas7/login"]
position = Vector2(2095.36, -2.24502)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(76.625, 270.856, 135, 157.5)

[node name="i4" type="Sprite2D" parent="Placas7/login"]
position = Vector2(2224.77, -6.16659)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(627.875, 68.75, 135, 180)

[node name="i5" type="Sprite2D" parent="Placas7/login"]
position = Vector2(2350.08, -4.49995)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(837.125, 271.25, 112.5, 164.25)

[node name="i6" type="Sprite2D" parent="Placas7/login"]
position = Vector2(2427.86, -4.49988)
texture = ExtResource("2_dbwua")
flip_h = true
region_enabled = true
region_rect = Rect2(835.078, 273.129, 94.6667, 163.333)

[node name="n" type="Sprite2D" parent="Placas7/login"]
position = Vector2(1195.83, -0.823478)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(349, 469.25, 125.875, 155.25)

[node name="n2" type="Sprite2D" parent="Placas7/login"]
position = Vector2(1317.4, -8.66661)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(623.375, 53, 128.25, 207)

[node name="n3" type="Sprite2D" parent="Placas7/login"]
position = Vector2(1697.79, -4.74505)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(220.625, 460.25, 126, 168.75)

[node name="n4" type="Sprite2D" parent="Placas7/login"]
position = Vector2(1501.72, -0.823478)
texture = ExtResource("2_dbwua")
region_enabled = true
region_rect = Rect2(596.375, 462.5, 261, 166.5)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.8, 0.8)

[connection signal="timeout" from="show_erro/TimerErro" to="show_erro" method="_on_timer_erro_timeout"]
[connection signal="animation_finished" from="show_erro/AnimationPlayer" to="show_erro" method="_on_animation_player_animation_finished"]
